Bugfixes, pagination align changed to right.

--- a/web/app/themes/isto/resources/assets/styles/_woocomerce-global.pcss
+++ b/web/app/themes/isto/resources/assets/styles/_woocomerce-global.pcss
@@ -21,7 +21,7 @@ body:not(.term-ypatingi-pasiulymai) {
 }
 
 .woocommerce-pagination .page-numbers {
-    @apply flex space-x-2 mt-6;
+    @apply flex justify-end space-x-2 mt-6;
 
     .current {
         @apply font-medium;
